--- a/mac相关/项目中遇到的单词.md
+++ b/mac相关/项目中遇到的单词.md
@@ -15,6 +15,7 @@
 |traditional|传统
 |funeral|n. 葬礼;[口]麻烦事 --- adj. 丧葬的，出殡的
 |envelope|n. 信封，封皮；[生]包膜；[天]包层；[数]包迹
+|distribute|vt. 分配, 分给 --- 散发; 散播; 分布
 
 
 
